[package]
name = "simple_csv"
version = "0.0.15"
authors = ["Daniel Ramos <dan@daramos.com>"]
description = "A simple CSV parsing implementation"
documentation = "https://github.com/daramos/simple_csv/"
homepage = "https://github.com/daramos/simple_csv"
repository = "https://github.com/daramos/simple_csv"
readme = "README.md"
keywords = ["csv", "delimited", "comma", "utf8"]
license = "MIT"


[lib]
name = "simple_csv"

[profile.bench]
lto = true

[profile.release]
lto = true


[features]
nightly = []
